# power-usage-comparisons

./: .gitignore  Makefile  README.md  SPECIFICATION.md  Test1.md  Test2.md  notes.md  openapi.json  openapi.yaml  requirements.txt  test2.csv
benchmark/: Makefile  benchmark.py  build.gradle.kts  settings.gradle.kts
golang/simple-rest/: .env  .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
golang/simple-rest/api/: db.go
java/quarkus-sample-rest/: Makefile  README.md  build.gradle  gradle.properties  settings.gradle
kotlin/simple-api/: Dockerfile  Makefile  build.gradle.kts  gradle.properties  settings.gradle.kts
node/simple-rest/: .env  Dockerfile  README.md  index.js  package-lock.json  package.json
python/django_rest/: Dockerfile  README.md  docker-compose.yaml  gunicorn_start.sh  requests.http  requirements.txt
python/django_rest/django_rest/: settings.py  urls.py
python/django_rest/products/: models.py  serializers.py  urls.py  views.py
python/jude/v1/: Dockerfile  Makefile  README.md  app.conf.py  app.py  requirements.txt
ruby/simple-api/: Dockerfile
rust/axum_diesel/: Cargo.toml  Dockerfile  diesel.toml  docker-compose.yaml  requests.http
rust/axum_diesel/scripts/: database.sql
rust/axum_diesel/src/: main.rs
rust/axum_diesel/src/core/: error.rs  mod.rs  models.rs
rust/axum_diesel/src/datasource/: mod.rs  models.rs  orders_repository.rs  products_repository.rs  schema.rs
rust/axum_diesel/src/web/: mod.rs
scala/scala-rest/: .gitignore  Dockerfile  Makefile  settings.gradle.kts
scripts/: Dockerfile  database.sql
(+101 files in other folders)
