[package]
name = "axum_diesel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.27", features = ["full"] }
axum = { version = "0.6.14" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
dotenvy = "0.15"

# Diesel
diesel = { version = "2.0.3", features = ["postgres", "r2d2"] }

# Logs
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0.40"

[dev-dependencies]
axum-macros = { version = "0.3.7" }